--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,10 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <meta content="initial-scale=1.0, minimum-scale=1.0, maximum-scale=2.0, user-scalable=no, width=device-width" name="viewport">
+    <meta name="referrer" content="no-referrer" />
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
+    <link href="//unpkg.com/progressive-image/dist/index.css" rel="stylesheet" type="text/css">
     <title>my-vue</title>
   </head>
   <body>
@@ -15,3 +18,5 @@
     <!-- built files will be auto injected -->
   </body>
 </html>
+
+
